--- a/app/views/logins/logout.html.erb
+++ b/app/views/logins/logout.html.erb
@@ -17,8 +17,8 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -%>
 
-<h1>Logout</h1>
+<h1><%=t '.title' %></h1>
 <p id="logoutmessage">
-	<b>Bye</b><br>
-	Please clear your browser cache.<br>
+	<b><%=t '.message' %></b><br>
+	<%=t '.hint' %><br>
 </p>
