--- a/app/views/logins/newuser.html.erb
+++ b/app/views/logins/newuser.html.erb
@@ -17,6 +17,6 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -%>
 
-<h1>Welcome to Cryptopus</h1>
-<p>We created a new keypair for you. Enjoy Cryptopus.</p>
+<h1><%=t '.title' %></h1>
+<p><%=t '.description' %></p>
 <%= link_to 'Continue', :controller => 'teams', :action => 'index' %>
