--- a/app/views/logins/noaccess.html.erb
+++ b/app/views/logins/noaccess.html.erb
@@ -17,7 +17,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -%>
 
-<h1>No Access</h1>
+<h1><%=t '.title' %></h1>
 <p id="logoutmessage">
 	<%= @message %><br>
 </p>
