--- a/app/views/recryptrequests/request.html.erb
+++ b/app/views/recryptrequests/request.html.erb
@@ -17,4 +17,4 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -%>
 
-<p id="recoveryrequestbox">A request to recrypt your group passwords was sendt to the root. Wait until he recrypted your passwords.</p>
+<p id="recoveryrequestbox"><%=t 'admin.recryptrequests.request.request_sent'%></p>
