--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -18,5 +18,5 @@
 -%>
 
 <h1>Edit team</h1>
-<% @submit_button_text = "Update" %>
+<% @submit_button_text = t(:update) %>
 <%= render :partial => 'form' %>
