--- a/app/views/accounts/_edit_menu.html.erb
+++ b/app/views/accounts/_edit_menu.html.erb
@@ -1,3 +1,3 @@
 <ul class="nav nav-pills">
-  <li><%= link_to image_tag( "viewmag.png" ) + " Show", :action => 'show', :id => @account %></li>
-</ul>>
+  <li><%= link_to image_tag( "viewmag.png" ) + " " + t(:show), :action => 'show', :id => @account %></li>
+</ul>
