--- a/app/views/accounts/_index_menu.html.erb
+++ b/app/views/accounts/_index_menu.html.erb
@@ -1,4 +1,4 @@
 <ul class="nav nav-pills">
-  <li><%= link_to image_tag( "folder_open.png" ) + " Groups", team_groups_path(@team) %></li>
-  <li><%= link_to image_tag("add.png") + " Create Account", new_team_group_account_path(@team, @group) %></li>
+  <li><%= link_to image_tag( "folder_open.png" ) + " " + t('.groups'), team_groups_path(@team) %></li>
+  <li><%= link_to image_tag("add.png") + " " + t('.create'), new_team_group_account_path(@team, @group) %></li>
 </ul>
