--- a/app/views/admin/users/_index_menu.html.erb
+++ b/app/views/admin/users/_index_menu.html.erb
@@ -1,3 +1,3 @@
 <ul class="nav nav-pills">
-  <li><%= link_to image_tag( "add.png" ) + " Create new user", new_admin_user_path %></li>
+  <li><%= link_to image_tag( "add.png" ) + " " + t('.create'), new_admin_user_path %></li>
 </ul>
