--- a/app/views/groups/_index_menu.html.erb
+++ b/app/views/groups/_index_menu.html.erb
@@ -1,3 +1,3 @@
 <ul class="nav nav-pills">
-  <li><%= link_to image_tag("add.png") + " Create group", new_team_group_url(@team) %></li>
+  <li><%= link_to image_tag("add.png") + " " + t('.create'), new_team_group_url(@team) %></li>
 </ul>
