--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -17,14 +17,14 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -%>
 
-<h1>Groups for team <%= @team.name %></h1>
+<h1><%=t '.title', :team_name => @team.name %></h1>
 
 <table>
 
   <tr>
-    <th>Group</th>
-    <th>Description</th>
-    <th colspan="3">Actions</th>
+    <th><%=t '.group' %></th>
+    <th><%=t :description %></th>
+    <th colspan="3"><%=t :actions %></th>
   </tr>
   
   <% for group in @groups %>
@@ -32,29 +32,29 @@
       <td><%= link_to image_tag( "folder_open.png" ) + " " + %Q{#{group.name}}, team_group_accounts_path(@team, group) %></td>
       <td><%= group.description %></td>
       <td><%= link_to image_tag("edit.png"), [:edit, @team, group] %></td>
-      <td><%= link_to image_tag("remove.png"), [@team, group], :confirm => 'Are you sure?', :method => :delete %></td>
+      <td><%= link_to image_tag("remove.png"), [@team, group], :confirm => t(:confirmation), :method => :delete %></td>
     </tr>
   <% end %>
 
 </table>
 
-<h2>Members</h2>
+<h2><%=t '.members' %></h2>
   
 <table>
 
   <% for teammember in @teammembers %>
     <tr class="<%= cycle('odd', 'even') %>">
       <td><%= teammember.user.full_name %></td>
-      <td><%= link_to image_tag("delete_user.png"), [@team, teammember], :confirm => 'Are you sure?', :method => :delete %></td>
+      <td><%= link_to image_tag("delete_user.png"), [@team, teammember], :confirm => t(:confirmation), :method => :delete %></td>
     </tr>
   <% end %>
 </table>
 
 <ul>
-	<li><%= link_to image_tag("add_user.png") + " Add member", new_team_teammember_path(@team) %></li>
+	<li><%= link_to image_tag("add_user.png") + " " + t('.add_member'), new_team_teammember_path(@team) %></li>
 </ul>
 
-<h2>Admins</h2>
+<h2><%=t '.admins' %></h2>
 
 <table>
   <% for admin in @admins %>
