--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -17,6 +17,6 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -%>
 
-<h1>New group</h1>
-<% @submit_button_text = "Create" %>
+<h1><%=t '.title' %></h1>
+<% @submit_button_text = t(:create) %>
 <%= render :partial => 'form' %>
