--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -17,16 +17,16 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -%>
 
-<h1>Add new attachment to account <br>"<%= @account.accountname %>"</h1>
+<h1><%=t '.title' %><br>"<%= @account.accountname %>"</h1>
 
 <%= form_for [@team, @group, @account, @item], :html => { :multipart => true } do |f| %>
 	
+  <%= f.label t('.upload') %><br />
   <%= f.file_field :file %>
-  <%= f.label 'File to upload' %><br />
 
-  <%= f.text_area :description, options = {:cols => 37}, :autofocus => true %>
   <%= f.label :description %><br />
+  <%= f.text_area :description, options = {:cols => 37} %>
 
-  <%= f.submit "Upload file" %>
+  <%= f.submit t('.upload_file') %>
 
 <% end %>
