--- a/app/views/layouts/_option.html.erb
+++ b/app/views/layouts/_option.html.erb
@@ -20,9 +20,9 @@
 <nav id="option">
 <ul>
   <li>
-    <%= link_to image_tag("exit.png") + " Logout", logout_login_path %>
+    <%= link_to image_tag("exit.png") + " " + t(:logout), logout_login_path %>
   </li>
-  <div id="countdownWrapper"><small>auto-logout in <span id='countdown'></small></span></div>
+  <div id="countdownWrapper"><small><%=t :auto_logout %> <span id='countdown'></small></span></div>
 </ul>
 </nav>
 <% end %>
