--- a/app/views/teams/_index_menu.html.erb
+++ b/app/views/teams/_index_menu.html.erb
@@ -1,3 +1,3 @@
 <ul class="nav nav-pills">
-  <li><%= link_to image_tag( "add.png" ) + " Create new team", new_team_path %></li>
+  <li><%= link_to image_tag( "add.png" ) + " " + t('.create'), new_team_path %></li>
 </ul>
