added language switcher select to the bottom right

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,7 +61,8 @@
     </div><!-- end #main -->
 
     <footer id="colophon" class="site-footer" role="contentinfo">
-      <%= link_to 'Cryptopus 2013', 'https://github.com/puzzle/cryptopus' %>
+      <%= link_to 'Cryptopus 2013', 'https://github.com/puzzle/cryptopus', {:class => "alignleft"} %>
+      <%= render :partial => 'layouts/locale' %>
     </footer><!-- end #colophon .site-footer -->
 
 
