added translations for form helpers

--- a/app/views/admin/ldapsettings/_form.html.erb
+++ b/app/views/admin/ldapsettings/_form.html.erb
@@ -33,7 +33,7 @@
   <%= f.label 'Bind DN' %>
   <%= f.text_field :bind_dn %>
 
-  <%= f.label 'Bind Password' %>
+  <%= f.label :bind_password %>
   <%= f.text_field :bind_password %>
 
   <%= f.label :encryption %>
