--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -20,3 +20,12 @@
 <h1><%=t '.title' %></h1>
 <% @submit_button_text = t(:update) %>
 <%= render :partial => 'form' %>
+
+<% if @user.auth_db? && !@user.new_record? %>
+<br/>
+  <%= form_tag(resetpassword_admin_recryptrequests_path(:user_id => @user.id)) do %>
+    <%= label_tag t('.reset_password') %>
+    <%= password_field_tag :new_password %>
+    <%= submit_tag t('.reset_password') %>
+  <% end %>
+<% end %>
