--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -16,7 +16,6 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -%>
-
 <h1><%=t '.title', :account_name => @account.accountname %></h1>
 
 <div>
@@ -24,14 +23,24 @@
   <br/>
 
   <p>
-    <strong><a href="#" onclick="$('#hidden_username').toggle()" ><%=t :username %></a></strong> <%= clippy(CGI.escape(@account.username)).html_safe %>
+    <strong><a href="#" onclick="$('#hidden_username').toggle()" ><%=t :username %></a></strong>
+    <button class='clip_button' id='username_clip_button' data-clipboard-text="<%= @account.username %>" title='Click to copy'><%= image_tag( "kget.png" ) %></button>
+    <script type="text/javascript">
+      var client = new ZeroClipboard( $('#username_clip_button') );
+    </script>
   </p>
   <div id="hidden_username" style="display:none">
     <%= @account.username %>
   </div>
+
   <p>
-    <strong><a href="#" onclick="$('#hidden_password').toggle()" ><%=t :password %></a></strong> <%= clippy(CGI.escape(@account.password)).html_safe %>
+    <strong><a href="#" onclick="$('#hidden_password').toggle()" ><%=t :password %></a></strong>
+    <button class='clip_button' id='password_clip_button' data-clipboard-text="<%= @account.password %>" title='Click to copy'><%= image_tag( "kget.png" ) %></button>
+    <script type="text/javascript">
+      var client = new ZeroClipboard( $('#password_clip_button') );
+    </script>
   </p>
+
   <div id="hidden_password" style="display:none">
     <%= @account.password %>
   </div>
