--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,15 +34,15 @@
 <body>
   <div id="page" class="hfeed container">
 
-    <header id="masthead" class="site-header" role="banner">
-      <%= link_to image_tag("cryptopus_top.png"), teams_path %>
-      <%= render :partial => 'layouts/option' %>
-    </header><!-- end #masthead .site-header -->
-
     <nav id="site-navigation" class="main-navigation" role="navigation">
       <%= render :partial => 'layouts/navigation' %>
     </nav><!-- end #site-navigation .main-navigation -->
     
+    <header id="masthead" class="site-header" role="banner">
+      <%= link_to image_tag("logo_cryptopus.svg"), teams_path, {:class => "site-header-logo"} %>
+      <%= render :partial => 'layouts/option' %>
+    </header><!-- end #masthead .site-header -->
+
     <div id="main">
 
       <div id="content" class="site-content" role="main">
