--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -24,13 +24,20 @@
 
 <ul class="search-result result-list">
   <li>
-    <h2 class="result-title">
-      <a href="">Lorem ipsum</a>
-    </h2>
-    <div class="result-action">
-      <span class="result-user">Username <button>copy</button></span>
-      <span class="result-pass">**** <button>copy</button></span>
+    <div class="result-description">
+      <h2 class="result-title">
+        <a href="">Lorem ipsum</a>
+      </h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est voluptatibus facere dolores molestias.</p>
     </div>
-    <p class="result-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est voluptatibus facere dolores molestias.</p>
+    <div class="result-action">
+      <div class="result-user">
+        <input type="text" value="Username"> <button>copy</button>
+      </div>
+      <div class="result-pass">
+        <a href="">show password</a>  
+        <button>copy</button>
+      </div>
+    </div>
   </li>
 </ul>
