Design adding icons

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -31,11 +31,13 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est voluptatibus facere dolores molestias.</p>
     </div>
     <div class="result-action">
-      <div class="result-user">
+      <div class="username">
         <input type="text" value="Username"> <button>copy</button>
       </div>
-      <div class="result-pass">
-        <a href="">show password</a>  
+      
+      <div class="password">
+        <a href="#" class="passwordLink"><svg class="icon-eye"><use xlink:href="#icon-eye"></use></svg> show password</a>
+        <span class="hiddenPassword hide">password</span>
         <button>copy</button>
       </div>
     </div>
