--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,7 @@
 </head>
     
 <body>
+  <%= render :partial => 'layouts/icons' %>
   <div id="page" class="hfeed container">
 
     <nav id="site-navigation" class="main-navigation" role="navigation">
