fix merge conflict in search index.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,7 @@
 </head>
     
 <body>
+  <%= javascript_include_tag "search" %> 
   <%= render :partial => 'layouts/icons' %>
   
   <div id="page" class="hfeed container">
