--- a/app/assets/stylesheets/partials/_variable.scss
+++ b/app/assets/stylesheets/partials/_variable.scss
@@ -36,7 +36,7 @@ $white				  : #fff !default;
 $whiteDark			: rgba(254, 254, 246, 1) !default;
 $whiteDarker		: rgba(248, 247, 241, 1) !default;
 
-$blue       :   #3A8BDB;
+$blue       :   #0D5AA7;
 $blueDark   :   darken($blue, 0.2);
 $yellow     :   rgba(255, 250, 180, 1);
 $green      :   rgba(155, 180, 50, 1);
