--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
     </nav><!-- end #site-navigation .main-navigation -->
     
     <header id="masthead" class="site-header" role="banner">
-      <%= link_to image_tag("logo_cryptopus.svg"), teams_path, {:class => "site-header-logo"} %>
+      <%= link_to image_tag("logo_cryptopus.svg"), '/', {:class => "site-header-logo"} %>
     </header><!-- end #masthead .site-header -->
 
     <div id="main">
