--- a/app/assets/stylesheets/partials/_table.scss
+++ b/app/assets/stylesheets/partials/_table.scss
@@ -8,6 +8,7 @@ table {
 	font-size: 12px;
 	max-width: 100%;
 	width: 100%;
+  background: white;
 }
 
 table, 
@@ -19,13 +20,14 @@ td {
 }
 
 th { 
-	background-color: #e8e8e8;
+	background-color: $blue;
     border-right: 1px solid #e0e0e0;
-	color: #666;
+	color: white;
 	margin: 5px 0 10px;
     padding: 5px 10px;
 	text-transform: uppercase;
 	text-align: left;
+  font-weight: bold;
 }
 
 table button, 
