--- a/app/assets/javascripts/templates/search/result_entry.hbs
+++ b/app/assets/javascripts/templates/search/result_entry.hbs
@@ -1,10 +1,13 @@
 {{#each .}}
   <li>
     <div class="result-description">
-      <h2 class="result-title">
-        <a href="">{{accountname}}</a>
-      </h2>
-      <p>{{description}}</p>
+      <h1 class="result-title">
+        <a href="/teams/{{team_id}}/groups/{{group_id}}/accounts/{{id}}">{{accountname}}</a>
+      </h1>
+      <p>
+        Group: <a href="/teams/{{team_id}}/groups/{{group_id}}/accounts">{{group}}</a><br>
+        Team: <a href="/teams/{{team_id}}/groups">{{team}}</a>
+      </p>
     </div>
     <div class="result-action">
       <div class="result-username select-click">
@@ -12,7 +15,7 @@
         <input type="text" readonly="readonly" value="{{username}}" class="input-full">
         <button class="clip_button" id="username_clip_button" data-clipboard-text="username" title="Click to copy"><svg class="icon-clippy"><svg class="icon-clippy"><use xlink:href="#icon-clippy"></use></svg></button>
       </div>
-      
+
       <div class="result-password select-click">
         <svg class="icon-key sm" alt="Password"><use xlink:href="#icon-key"></use></svg>
         <a href="#" class="password-link">Show password</a>
