--- a/app/assets/javascripts/templates/search/result_entry.hbs
+++ b/app/assets/javascripts/templates/search/result_entry.hbs
@@ -12,15 +12,23 @@
     <div class="result-action">
       <div class="result-username select-click">
         <svg class="icon-person sm"><use xlink:href="#icon-person"></use></svg>
-        <input type="text" readonly="readonly" value="{{username}}" class="input-full">
-        <button class="clip_button" id="username_clip_button" data-clipboard-text="username" title="Click to copy"><svg class="icon-clippy"><svg class="icon-clippy"><use xlink:href="#icon-clippy"></use></svg></button>
+        <input id="username_{{id}}" type="text" readonly="readonly" value="{{username}}" class="input-full">
+        <button class="clip_button" data-clipboard-target="username_{{id}}" title="Click to copy">
+          <svg class="icon-clippy">
+            <use xlink:href="#icon-clippy"></use>
+          </svg>
+        </button>
       </div>
 
       <div class="result-password select-click">
         <svg class="icon-key sm" alt="Password"><use xlink:href="#icon-key"></use></svg>
         <a href="#" class="password-link">Show password</a>
-        <input type="text" readonly="readonly" class="password-hidden hide input-full" value="{{password}}">
-        <button class="clip_button" id="password_clip_button" data-clipboard-text="pass" title="Click to copy"><svg class="icon-clippy"><use xlink:href="#icon-clippy"></use></svg></button>
+        <input id="password_{{id}}"type="text" readonly="readonly" class="password-hidden hide input-full" value="{{password}}">
+        <button class="clip_button" data-clipboard-target="password_{{id}}" title="Click to copy">
+          <svg class="icon-clippy">
+            <use xlink:href="#icon-clippy"></use>
+          </svg>
+        </button>
       </div>
     </div>
   </li>
