--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -36,7 +36,7 @@
     <% end %>
     <td><%= team.description %></td>
     <td><%= link_to image_tag( "edit.png" ), edit_team_path( team ) %></td>
-    <td><%= link_to image_tag( "remove.png" ), team, :confirm => t(:confirmation), :method => :delete %></td> 
+    <td><%= link_to image_tag( "remove.png" ), team, data: {confirm: :confirmation}, :method => :delete %></td> 
     </tr>
 
   <% end %>
