--- a/app/views/teammembers/_form.html.erb
+++ b/app/views/teammembers/_form.html.erb
@@ -22,7 +22,7 @@
   <%= error_messages_for 'teammembers' %>
 
   <%= label_tag t(:username) %>
-  <%= select_tag :username , options_for_select(@user_list) %>
+  <%= select_tag :username , options_for_select(teammember_canditates) %>
 
   <%= submit_tag @submit_button_text %>
 <% end %>
