--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -22,9 +22,17 @@
 	  <ul class="nav nav-pills">
 	    <%= nav_link "organization", t('teams.title'), teams_path %>
         <% if User.find( session[:user_id] ).admin? or User.find( session[:user_id] ).root? %>
-	        <%= nav_link "tools", t(:ldap_settings), admin_ldapsettings_path %>
-	        <%= nav_link "lock", t(:recrypt_requests), admin_recryptrequests_path %>
-	        <%= nav_link "person", t(:users), admin_users_path %>
+				<li class="dropdown">
+					<a href="bootstrap-elements.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown">
+						Admin
+						<b class="caret"></b>
+					</a>
+					<ul class="dropdown-menu">
+						<li><%= nav_link "tools", t(:ldap_settings), admin_ldapsettings_path %></li>
+		        <li><%= nav_link "lock", t(:recrypt_requests), admin_recryptrequests_path %></li>
+		        <li><%= nav_link "person", t(:users), admin_users_path %></li>
+					</ul>
+				</li>
         <% end %>
         <% if User.find( session[:user_id] ).auth_db? %>
 	        <%= nav_link "key", t(:change_password), pwdchange_login_path %>
