--- a/app/assets/stylesheets/partials/main/_menus.scss
+++ b/app/assets/stylesheets/partials/main/_menus.scss
@@ -37,9 +37,19 @@ nav {
 
 .dropdown-menu > li > a{
   color: #0d59a6;
-  border-radius: 5px;
   padding: 8px;
 }
+
+.dropdown-menu > li:last-child > a{
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.dropdown-menu > li:nth-of-type(2) > a{
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
 .dropdown-menu > li > a:hover{
   color: #0d59a6;
   background-color: #eeeeee;
